slow query message seen in mongos for ismaster

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 4.7.0, 4.4.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • v4.4
    • Repl 2020-09-07
    • None
    • None
    • None
    • None
    • None
    • None
    • None

       

      In our mongos logs we see every xx seconds a 'slow query' message executing an admin command for ismaster. Is this a message we can ignore or normal behaviour?

      {"t":{"$date":"2020-08-11T10:03:17.122+02:00"},"s":"I", "c":"SHARDING", "id":20997, "ctx":"Uptime-reporter","msg":"Refreshed RWC defaults","attr":{"newDefaults":{}}}
      {"t":{"$date":"2020-08-11T10:03:22.893+02:00"},"s":"I", "c":"COMMAND", "id":51803, "ctx":"conn171","msg":"Slow query","attr":{"type":"command","ns":"admin.$cmd","command":{"ismaster":1,"topologyVersion":{"processId":{"$oid":"5f310922c0b272dc8039c2e7"},"counter":0},"maxAwaitTimesMS":10000,"$db":"admin"},"numYields":0,"reslen":436,"protocol":"op_msg","durationMillis":10010}}
      {"t":{"$date":"2020-08-11T10:03:24.617+02:00"},"s":"I", "c":"COMMAND", "id":51803, "ctx":"conn1047","msg":"Slow query","attr":{"type":"command","ns":"admin.$cmd","command":{"ismaster":1,"topologyVersion":{"processId":{"$oid":"5f310922c0b272dc8039c2e7"},"counter":0},"maxAwaitTimeMS":10000,"$db":"admin"},"numYields":0,"reslen":436,"protocol":"op_msg","durationMillis":10010}}
      {"t":{"$date":"2020-08-11T10:03:27.127+02:00"},"s":"I", "c":"SHARDING", "id":20997, "ctx":"Uptime-reporter","msg":"Refreshed RWC defaults","attr":{"newDefaults":{}}}
      {"t":{"$date":"2020-08-11T10:03:32.903+02:00"},"s":"I", "c":"COMMAND", "id":51803, "ctx":"conn171","msg":"Slow query","attr":{"type":"command","ns":"admin.$cmd","command":{"ismaster":1,"topologyVersion":{"processId":{"$oid":"5f310922c0b272dc8039c2e7"},"counter":0},"maxAwaitTimeMS":10000,"$db":"admin"},"numYields":0,"reslen":436,"protocol":"op_msg","durationMillis":10010}}
      {"t":{"$date":"2020-08-11T10:03:34.628+02:00"},"s":"I", "c":"COMMAND", "id":51803, "ctx":"conn1047","msg":"Slow query","attr":{"type":"command","ns":"admin.$cmd","command":{"ismaster":1,"topologyVersion":{"processId":{"$oid":"5f310922c0b272dc8039c2e7"},"counter":0},"maxAwaitTimeMS":10000,"$db":"admin"},"numYields":0,"reslen":436,"protocol":"op_msg","durationMillis":10010}}
       
      

      I see similar Jira request SERVER-47267

      and it seems this is already fixed?

            Assignee:
            A. Jesse Jiryu Davis
            Reporter:
            Kin Wai Cheung (EXT)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: