SERVER-50242 Don't log awaitable "hello" as slow query

(cherry picked from commit edfe9d2737656626b77543047215c4dfb9d0b23f)