src/mongo/db/service_entry_point_common.cpp
@@ -1715,7 +1715,7 @@ DbResponse ServiceEntryPointCommon::handleRequest(OperationContext* opCtx,
     DbResponse dbresponse;
     if (op == dbMsg || (op == dbQuery && isCommand)) {
         dbresponse = receivedCommands(opCtx, m, behaviors);
-        // IsMaster should take kMaxAwaitTimeMs at most, log if it takes twice that.
+        // Hello should take kMaxAwaitTimeMs at most, log if it takes twice that.
         if (auto command = currentOp.getCommand();
             command && (command->getName() == "ismaster" || command->getName() == "isMaster")) {
             slowMsOverride =
